[package]
name = "rust-mt-serv"
version = "0.1.0"
edition = "2021"

[dependencies]
may_minihttp = "0.1"
may = "0.3.49"
actix-web = "4"
ntex = { version = "2.0", features = ["tokio"] }
env_logger = "0.11.6"
axum = {version = "0.8.1" , features = ["macros"]}
tokio = { version = "1.43.0", features = ["full"] }
compio = { version = "0.13.2", features = ["runtime","macros","polling"] }
cyper = "0.1.0"
cyper-axum = "0.2.1"
compio-net = "0.6.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
sled = "0.34.7"
fred = "10.0.4"
